添加工具类和完善测试用例